# radio-drama-generator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: .devcontainer.json  pull_request_template.md  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: docs.yaml  lint.yaml  package.yaml  tests.yaml
demo/: app.py  download_models.py
docs/: api.md  cli.md  customization.md  future-features-contributions.md  getting-started.md  index.md  step-by-step-guide.md
docs/assets/: custom.css
example_data/: Mozilla-Trustworthy_AI.docx  Mozilla-Trustworthy_AI.md  config.yaml  introducing-mozilla-ai-investing-in-trustworthy-ai.html
src/document_to_podcast/: cli.py  config.py
src/document_to_podcast/inference/: model_loaders.py  text_to_speech.py
src/document_to_podcast/podcast_maker/: config.py  script_to_audio.py
src/document_to_podcast/preprocessing/: data_cleaners.py  data_loaders.py
src/opennotebookllm/inference/: model_loaders.py  text_to_speech.py  text_to_text.py
src/opennotebookllm/podcast_maker/: config.py  script_to_audio.py
src/opennotebookllm/preprocessing/: __init__.py  data_cleaners.py
tests/: conftest.py
tests/e2e/: test_document_to_podcast.py
tests/integration/: test_data_load_and_clean.py  test_load_and_clean.py  test_model_load_and_inference.py  test_text_to_text_to_speech.py
tests/preprocessing/: test_data_loaders.py
tests/unit/inference/: test_model_loaders.py  test_text_to_speech.py  test_text_to_text.py
tests/unit/podcast_maker/: test_script_to_audio.py
tests/unit/preprocessing/: test_data_cleaners.py  test_data_loaders.py
